<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppName</string>
    <string name="app_title">App Title</string>

    <string name="phone_number">شماره موبایل</string>
    <string name="otp_code">کد تایید</string>

    <string name="barcodeScan">بارکد را اسکن کنید</string>
    <string name="rating_bottom_sheet_message">لطفا برای حمایت و بهبود عملکرد، به برنامه امتیاز دهید و نظر خود را با ما در میان بگذارید.</string>
    <string name="rate">امتیاز میدم</string>
    <string name="later">بعدا</string>
    <string name="thanks_for_your_feedback">از بازخورد شما سپاس‌گزاریم...</string>

    <string name="submit">تایید</string>
    <string name="choose_language">انتخاب زبان</string>
    <string name="rate_app">امتیاز به برنامه</string>
    <string name="transaction_history">سوابق تراکنش</string>
    <string name="login_to_account">ورود به حساب کاربری</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="logout_confirmation">می‌خواهید از حساب خود خارج شوید؟</string>
    <string name="share_app">اشتراک‌گذاری</string>
    <string name="privacy_policy">حریم خصوصی</string>
    <string name="terms_and_conditions">قوانین و مقررات</string>
    <string name="callSupport">تماس با پشتیبانی</string>
    <string name="choose_app_language">انتخاب زبان</string>
    <string name="please_wait_for_response">در حال دریافت اطلاعات از سرور لطفا منتظر بمانید...</string>
    <string name="retry">تلاش مجدد</string>
    <string name="error">خطا</string>
    <string name="error_occurred">خطایی رخ داده!</string>
    <string name="timeout_error_message">پاسخی از سرور دریافت نشد. لطفا دوباره تلاش نمایید.</string>
    <string name="cancel">انصراف</string>
    <string name="ok">باشه</string>
    <string name="confirm">تایید</string>
    <string name="delete_confirmation">آیا از حذف این مورد اطمینان دارید؟</string>
    <string name="attention">توجه</string>
    <string name="tv_please_choose_prefer_language">زبان مورد نظر خود را انتخاب کنید (choose your preferred language) :</string>
    <string name="persian_language">فارسی (Persian)</string>
    <string name="english_language">انگلیسی (English)</string>
    <string name="login_signup">ورود | ثبت نام</string>
    <string name="login_signup_description">برای ورود یا ثبت‌نام، شماره موبایل خود را وارد کنید.</string>
    <string name="terms_and_conditions_description">ورود شما به معنی پذیرش قوانین و مقررات است.</string>
    <string name="otp_sent_to_phone_number">کد تایید برای شماره %s پیامک شد.</string>
    <string name="edit_phone_number">اصلاح شماره</string>
    <string name="login">ورود</string>
    <string name="enter_otp_code_description">کد تایید را وارد کنید.</string>
    <string name="enter_your_phone_number">شماره موبایل خود را وارد کنید!</string>
    <string name="remaining_seconds_to_resend_otp_code">%s ثانیه تا دریافت مجدد کد تایید</string>
    <string name="resend_otp_code">ارسال مجدد کد تایید</string>
    <string name="enter_otp_code">کد تایید را وارد کنید!</string>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="helper_no_transaction_message">شما تاکنون تراکنشی نداشته‌اید</string>
    <string name="helper_saved_to_clipboard">در حافظه کپی شد.</string>
    <string name="please_choose_app_language">لطفا زبان مورد نظر خود را انتخاب کنید.</string>
</resources>