<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_choose_lang"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_choose_prefer_language"
        style="@style/Text2Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header"
        android:layout_alignParentTop="true"
        android:text="@string/tv_please_choose_prefer_language"
        android:textColor="@color/ph_gray2" />


    <RadioGroup
        android:id="@+id/language_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_prefer_language"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/margin_16">


        <RadioButton
            android:id="@+id/persian_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_radius_12"
            android:button="@null"
            android:drawableStart="@drawable/bg_radio_button"
            android:drawablePadding="@dimen/margin_12"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/persian_language" />

        <RadioButton
            android:id="@+id/english_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/background_radius_12"
            android:button="@null"
            android:drawableStart="@drawable/bg_radio_button"
            android:drawablePadding="@dimen/margin_12"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/english_language" />

    </RadioGroup>

    <include
        android:id="@+id/confirmLanguageBtnComponent"
        layout="@layout/component_button_filled"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/language_container"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_16" />

</RelativeLayout>