<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/helper_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginToolbarCl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogoIv"
            android:layout_width="@dimen/_88sdp"
            android:layout_height="@dimen/_104sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appLogoIv"
            android:text="@string/app_title"
            android:textAlignment="center"
            style="@style/Text6Bold"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/helper_background_top_radius_16"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginToolbarCl">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginSignUpTitleTv"
            style="@style/Title"
            android:textColor="@color/helper_text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/login_signup"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginSignUpDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/login_signup_description"
            android:textAlignment="viewStart"
            style="@style/Text2Regular"
            android:textColor="@color/helper_gray4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSignUpTitleTv" />

        <include
            android:id="@+id/phoneNumberInput"
            layout="@layout/component_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/loginSignUpDescriptionTv" />

        <include
            android:id="@+id/confirmPhoneNumberBtn"
            layout="@layout/component_button_filled"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInput" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/termsAndConditionsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/terms_and_conditions_description"
            android:textAlignment="center"
            style="@style/Text2Light"
            android:textColor="@color/helper_gray3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPhoneNumberBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>