<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HelperDrawerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/toolbarRl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/helper_background_color">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_6"
                app:srcCompat="@drawable/helper_ic_logo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menuIv"
                android:layout_width="@dimen/margin_48"
                android:layout_height="@dimen/margin_48"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_12"
                app:srcCompat="@drawable/helper_ic_menu" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIv"
                android:layout_width="@dimen/margin_48"
                android:layout_height="@dimen/margin_48"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin_12"
                android:visibility="gone"
                app:srcCompat="@drawable/helper_ic_back" />
        </RelativeLayout>


        <FrameLayout
            android:id="@+id/fragmentContainerFl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarRl"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menuNavigationDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/helper_background_left_radius_16"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/navigationDrawerTopLayoutCl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/helper_background_top_left_radius_16"
                android:backgroundTint="@color/helper_background_color"
                android:paddingTop="@dimen/_24sdp"
                android:paddingBottom="@dimen/_24sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appIconIv"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/helper_ic_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phoneNumberTv"
                    style="@style/Text3Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appIconIv"
                    tools:text="0123456789" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/transactionHistoryRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/navigationDrawerTopLayoutCl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16">

                <TextView
                    android:id="@+id/transactionHistoryTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/transactionHistoryIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/transaction_history"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/transactionHistoryIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/helper_ic_payment_history" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rateAppRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/transactionHistoryRl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16">

                <TextView
                    android:id="@+id/rateAppTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/rateAppIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/rate_app"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/rateAppIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/helper_ic_rate" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shareAppRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/rateAppRl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16">

                <TextView
                    android:id="@+id/shareAppTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@id/shareAppIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/shareAppIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/helper_ic_share" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/privacyPolicyRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/shareAppRl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/privacyPolicyTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/privacyPolicyIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/privacyPolicyIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/ic_privacy_policy" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/termsAndConditionsRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/privacyPolicyRl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/termsAndConditionsTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/termsAndConditionsTv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/termsAndConditionsIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/ic_terms_and_conditions" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appLanguageRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_below="@id/shareAppRl"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16">

                <TextView
                    android:id="@+id/appLanguageTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/appLanguageIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/choose_app_language"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appLanguageIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    app:srcCompat="@drawable/helper_ic_language" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginLogoutRl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_12">

                <TextView
                    android:id="@+id/loginLogoutTv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@id/loginLogoutIv"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/login_to_account"
                    android:textColor="@color/helper_text_black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/loginLogoutIv"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/helper_background_radius_8"
                    android:padding="@dimen/margin_8"
                    tools:srcCompat="@drawable/helper_ic_language" />
            </RelativeLayout>


        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>